TEST_PROGRAMS/INVALID_TYPECHECK/or_floats.go
package main;

func main() {
    
    //this operation is allowed
    var c float64= 1;
    var x float64= c|c;
    print(x);
}
